# sitg-geocode

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  bandit.toml  mypy.ini  pyproject.toml  requirements.txt  ty.toml  uv.toml
notebooks/: resultat.csv  sitg_labs_api.ipynb  test_adresses.csv
scripts/: auto_bump_patch.sh  tag_version.sh
src/sitg_geocode/: __init__.py  geocode.py
