[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sitg-geocode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "fastexcel>=0.20.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "ruff>=0.15.12",
    "tqdm>=4.67.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sitg_geocode"]
