[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sitg-geocode"
version = "0.1.28"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "dataframely>=2.11.0",
    "loguru>=0.7.3",
    "polars>=1.40.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "bump-my-version>=1.4.1",
    "fastexcel>=0.20.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "pandas>=3.0.2",
    "pre-commit>=4.6.0",
    "pyarrow>=24.0.0",
    "ruff>=0.15.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sitg_geocode"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]

# [tool.ty] now lives in the standalone ty.toml synced from the ci-templates
# repo, which takes precedence over any [tool.ty] left here. See
# ci-templates/README.md.

[tool.bumpversion]
current_version = "0.1.28"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = '^version = "{current_version}"'
replace = 'version = "{new_version}"'
